Collectors().toList() for .toList()